--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Git complete course
+-->
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
