--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Git complete course
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just  content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; GIt training 2014</p>
 	</footer>
 </body>
 </html>
