--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- Git complete course
 adding changes before rebasing conflicts
+sillychanges
 -->
 <head>
 	<title>A Very  Website</title>
@@ -17,11 +18,11 @@ adding changes before rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some stuff
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; GIt training 2014</p>
+		<p>&copy; sahiti 2014</p>
 	</footer>
 </body>
 </html>
