adding changes after rebasing

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ adding changes before rebasing conflicts
 sillychanges
 -->
 <head>
-	<title>A Very  Website</title>
+	<title>lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
