Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ adding changes before rebasing conflicts
 sillychanges
 -->
 <head>
-	<title>lots of trouble</title>
+	<title>update </titleitle for stash example>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,6 +20,8 @@ sillychanges
 		<p>
 		just stuff
 		not sure
+		adding more important content here
+		
 		
 		</p>
 	</main>
