changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ adding changes before rebasing conflicts
 sillychanges
 -->
 <head>
-	<title>update </titleitle for stash example>
+	<title>update  stash</titleitle for stash example>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
